<resources>
    <string name="app_name">Narnolia</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="text_footer">Powered By smartforce CRM</string>
    <string name="forgetPassword"><u>Forgot Password?  </u></string>
    <string name="forgot_message">Reset Link has been sent to your respected Email ID.</string>
    <string name="check_yes">Yes</string>
    <string name="check_no">No</string>
    <string name="dashboard">Dashboard</string>
    <string name="create_lead">Create Lead</string>
    <string name="update_lead">Update Lead</string>
    <string name="master">Masters</string>
    <string name="setting">Settings</string>
    <string name="mis_report">MIS Reports</string>
    <string name="notification">Notification</string>
    <string name="header_text_home">Home</string>
    <string name="header_text_dashboard">Dashboard</string>
    <string name="header_text_create_lead">Create Lead</string>
    <string name="header_text_update_lead">Update Lead</string>
    <string name="Header_text_Notification">Notification</string>
    <string name="status_report">Status Reports</string>
    <string name="attendence_report">Attedence Reports</string>
    <string name="attendance">Attendance</string>
    <string name="Sourceoflead">Source of Lead</string>
    <string name="subsource">Sub Source</string>
    <string name="cust_id">Customer ID</string>
    <string name="fname">First Name</string>
    <string name="mname">Middle Name</string>
    <string name="lname">Last Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="location">Location</string>
    <string name="city">City</string>
    <string name="pincode">Pincode</string>
    <string name="prospectiveproduct">Prospective Products</string>
    <string name="hintcustid">Enter Customer ID</string>
    <string name="hintfname">Enter First Name</string>
    <string name="hintmname">Enter Middle Name</string>
    <string name="hintlname">Enter Last Name</string>
    <string name="hintmobileno">Enter Mobile Number</string>
    <string name="hintlocation">Enter Location</string>
    <string name="hintcity">Enter City</string>
    <string name="hintpincode">Enter Pincode</string>
    <string name="hintemail">Enter E-Mail ID</string>
    <string name="hintdateofbirth">Select Date of birth</string>
    <string name="hintaddress">Enter Address</string>
    <string name="hintvillage">Enter Flat/Village</string>
    <string name="hintstreet">Enter Street/Post office</string>
    <string name="hintdetails">Please Enter Details</string>
    <string name="hintremark">remark</string>
    <string name="hintpanno">Enter Pan No</string>
    <string name="createlead">Create Lead</string>
    <string name="cancellead">Cancel Lead</string>
    <string name="createandclose">Create and Close lead</string>
    <string name="leadname">Lead Name</string>
    <string name="email">E-mail ID</string>
    <string name="agegroup">Age Group</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="flatorvillage">Flat/Village</string>
    <string name="streetorpostoffice">Street/Post office</string>
    <string name="occupation">Occupation</string>
    <string name="annualincome">Annual Income</string>
    <string name="otherbroker">Other Brokers Dealt with</string>
    <string name="mettingstatus">Metting Status</string>
    <string name="contacted">Contacted</string>
    <string name="notcontacted">Not Contacted</string>
    <string name="nextmeeting">Next Metting Date</string>
    <string name="lastmeeting">Last Metting Date</string>
    <string name="lastmettingupdate">Last Metting Update</string>
    <string name="mettingagenda">Meeting Agenda</string>
    <string name="leadupdatelog">Lead Update Log</string>
    <string name="updatelead">Update Lead</string>
    <string name="searchBtn">Search</string>
    <string name="closelead">Close Lead</string>
    <string name="reason">Reason</string>
    <string name="leadstatus">Lead Status</string>
    <string name="opportunity">Opportunity Pitched</string>
    <string name="business">Business Opportunity</string>
    <string name="reqmob">please enter 10 digit mobile no</string>
    <string name="correct_mobile_no">Please enter correct mobile no</string>
    <string name="pan">Please Enter Pan Card No</string>
    <string name="name">Please enter valid name</string>
    <string name="customerid">Please enter customer id</string>
    <string name="reqcity">City is Required</string>
    <string name="reqpincode">Pincode is Required</string>
    <string name="invalid_pin">Invalid Pincode</string>
    <string name="invalid_email">Invalid email Id</string>
    <string name="text_lead_created">Lead Created</string>
    <string name="remark">Remark</string>
    <string name="pan_no">Pan No</string>
    <string name="competitor">Competitor Name</string>
    <string name="product">Product</string>
    <string name="research_type">Type of research</string>
    <string name="duration">Duration</string>
    <string name="prospectiveproduct1">Select Option</string>
    <string name="opportunity_pitched2">Select Option</string>
    <string name="margin">Margin</string>
    <string name="aum">AUM</string>
    <string name="sip">SIP</string>
    <string name="number">Number</string>
    <string name="value">Value</string>
    <string name="premium">Premium</string>
    <string name="warning_internet">Please check your internet settings.</string>
    <string name="error_login">You have entered wrong username or password</string>
    <string name="Email">Email</string>
    <string name="LoginId">LoginId</string>
    <string name="Mobile">Mobile</string>
    <string name="Result">Result</string>
    <string name="Status">Status</string>
    <string name="UserId">UserId</string>
    <string name="FALSE">FALSE</string>
    <string name="column_email">email</string>
    <string name="column_loginId">loginId</string>
    <string name="column_mobile">mobile</string>
    <string name="column_result">result</string>
    <string name="column_status">status</string>
    <string name="column_userId">userId</string>
    <string name="column_username">username</string>
    <string name="column_password">password</string>
    <string name="column_attendance">Attendance</string>
    <string name="column_role_id">is_rm</string>
    <string name="column_masterdetails_id">id</string>
    <string name="column_masterdetails_type">type</string>
    <string name="column_masterdetails_value">value</string>
    <string name="column_masterdetails_lmd">lmd</string>
    <string name="column_masterdetails_transfer">transfer</string>
    <string name="column_masterdetails_flag">flag</string>
    <string name="column_direct_lead_id">direct_lead_id</string>
    <string name="column_lead_id">lead_id</string>
    <string name="column_stages">stages</string>
    <string name="column_source_of_lead">source_of_lead</string>
    <string name="column_sub_source">sub_source</string>
    <string name="column_customer_id">customer_id</string>
    <string name="column_firstname">fname</string>
    <string name="column_middlename">mname</string>
    <string name="column_lastname">lname</string>
    <string name="column_dob">dob</string>
    <string name="column_age">age</string>
    <string name="column_mobile_no">mobile_no</string>
    <string name="column_address1">address_1</string>
    <string name="column_address2">address_2</string>
    <string name="column_address3">address_3</string>
    <string name="column_location">location</string>
    <string name="column_city">city</string>
    <string name="column_pincode">pincode</string>
    <string name="column_email_id">email_id</string>
    <string name="column_annual_income">annual_income</string>
    <string name="column_occupation">occupation</string>
    <string name="column_created_from">created_from</string>
    <string name="column_app_version">app_version</string>
    <string name="column_app_dt">app_dt</string>
    <string name="column_flag">flag</string>
    <string name="column_allocated_user_id">allocated_user_id</string>
    <string name="column_other_broker_dealt_with">other_broker_dealt_with</string>
    <string name="column_meeting_status">meeting_status</string>
    <string name="column_lead_status">lead_status</string>
    <string name="column_competitor_name">competitor_name</string>
    <string name="column_product">product</string>
    <string name="column_remarks">remarks</string>
    <string name="column_typeofsearch">typeofsearch</string>
    <string name="column_duration">duration</string>
    <string name="column_pan_no">pan_no</string>
    <string name="column_b_margin">b_margin</string>
    <string name="column_b_aum">b_aum</string>
    <string name="column_b_sip">b_sip</string>
    <string name="column_b_number">b_number</string>
    <string name="column_b_value">b_value</string>
    <string name="column_b_premium">b_premium</string>
    <string name="column_reason">reason</string>
    <string name="column_next_meeting_date">next_meeting_date</string>
    <string name="column_meeting_agenda">meeting_agenda</string>
    <string name="column_lead_update_log">lead_update_log</string>
    <string name="column_created_by">created_by</string>
    <string name="column_created_dt">created_dt</string>
    <string name="column_updated_dt">updated_dt</string>
    <string name="column_updated_by">updated_by</string>
    <string name="column_business_opportunity">business_opportunity</string>
    <string name="column_customer_id_name">customer_id_name</string>
    <string name="column_duration_date">duration_date</string>
    <string name="column_occupation_details">non_salary_val</string>
    <string name="column_m_pin_district">district</string>
    <string name="column_m_pin_pincode">pincode</string>
    <string name="select_pincode">Select Pincode</string>
    <string name="column_emp_code">emp_code</string>
    <string name="column_last_meeting_date">last_meeting_date</string>
    <string name="column_last_meeting_update">last_meeting_update</string>
    <string name="nation">Nation</string>
    <string name="zone">Zone</string>
    <string name="region">Region</string>
    <string name="cluster">Cluster</string>
    <string name="loc">Location</string>
    <string name="employee">Employee</string>
    <string name="open">Open</string>
    <string name="welcome">Welcome : </string>
    <string name="submit">Submit</string>
    <string name="closebtn">Close</string>
    <string name="next_meeting">Next Meeting</string>
    <string name="close">Close the lead</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="user_name">User name is Required.</string>
    <string name="pass">Password is Required.</string>
    <string-array name="titles">
        <item>Prakash</item>
        <item>Bhavin</item>
        <item>Chirag</item>
        <item>Yakub</item>
    </string-array>
    <string-array name="age_group">
        <item>Select Age Group</item>
        <item>18-35 yrs</item>
        <item>36-45 yrs</item>
        <item>46-60 yrs</item>
        <item>60 yrs and above</item>
    </string-array>
    <string name="column_M_id">id</string>
    <string name="column_M_Product_type_id">Product_type_id</string>
    <string name="column_M_Category">Category</string>
    <string name="column_M_Subcategory">Subcategory</string>
    <string name="column_M_Status">status</string>
    <string name="column_dld_id">id</string>
    <string name="column_did_lead_id">lead_id</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="search_by">Search By:</string>
    <string name="select_monthand_year">Select Month and Year:</string>
</resources>